file-upload done

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,27 @@
+# For BLOB
+spring.servlet.multipart.enabled=true
 
+# For SQL 
+
+# set MYSQL_PASSWORD=Shiyi@1997
+# set MYSQL_USERNAME=root
+
+spring.datasource.url=jdbc:mysql://localhost:3306/blobdb
+spring.datasource.username=${MYSQL_USERNAME}
+spring.datasource.password=${MYSQL_PASSWORD}
+spring.datasource.hikari.timeout=2000
+spring.datasource.hikari.maximumPoolSize=5
+
+# For Digital Ocean S3 (case sensitive)
+
+# set DO_STORAGE_BUCKETNAME=ibfbatch2csf-shiyi
+# set DO_STORAGE_ENDPOINT=sgp1.digitaloceanspaces.com
+# set DO_STORAGE_KEY=DO00ETKPB98V6WFCFWWK
+# set DO_STORAGE_REGION=sgp1
+# set DO_STORAGE_SECRETKEY=<secretkey-here>
+
+do.storage.key=${DO_STORAGE_KEY}
+do.storage.secretkey=${DO_STORAGE_SECRETKEY}
+do.storage.endpoint=${DO_STORAGE_ENDPOINT}
+do.storage.endpoint.region=${DO_STORAGE_REGION}
+do.storage.bucketname=${DO_STORAGE_BUCKETNAME}
